# Nelly

./: .env.sample  .eslintignore  .eslintrc.json  .gitignore  Cargo.toml  ModifyAPIMessage.js  ModifyDjs.js  ModifyDjs.mjs  README.md  commands.js  commands.json  global.mjs  index.js  index.mjs  nitro.txt  package-lock.json  package.json  spliter.js  spliter.mjs
.github/workflows/: main.yml
commands/: autoplay.js  autoplay.mjs  disconnect.js  disconnect.mjs  eval.js  eval.mjs  help.js  help.mjs  join.js  join.mjs  loop.js  loop.mjs  loopqueue.js  loopqueue.mjs  nowplay.js  nowplay.mjs  ping.js  ping.mjs  play.js  play.mjs  queue.js  queue.mjs  remove.js  remove.mjs  safeeval.mjs  search.js  search.mjs  skip.js  skip.mjs  todo.js  todo.mjs
extensionStructure/: APIMessage.js  ButtonCollector.js  DMChannel.js  Message.js  MessageButton.js  TextChannel.js  Util.js  WebhookClient.js  extend.js
lang/: en.json  ja_jp.json
src/: main.rs
structure/: ActionRow.js  ButtonClickCollector.js  ButtonClickCollector.mjs  MessageButton.js  MessageButton.mjs  MessageComponentInteraction.js  MessageComponentInteraction.mjs  Queue.js  Queue.mjs  Song.js  Song.mjs
util/: execute.mjs
utils/: exeWorker.js  exeWorker.mjs
