[package]
authors = ["Sueqkjs", "ES-Yukun", "walker27460"]
name = "RottenFlour"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
twilight-cache-inmemory = "*"
twilight-gateway = "*"
twilight-http = "*"
twilight-model = "*"
twilight-command-parser = "*"
futures = "*"
dotenv = "*"
tokio = {version = "1.6.0", features = ["full"]}